[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["rt", "sync"] }
indexer-sdk = { path = "../../.." }
bitcoincore-rpc = "0.17.0"
async-channel = "1.9.0"
log4rs = { version = "1.2.0", features = ["gzip"] }
env_logger = "0.10.0"
log = "0.4.20"
anyhow = "1.0.69"